--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    gap: 15px;
+    gap: 16px;
 }
 
 a {
@@ -20,15 +20,18 @@ a {
 
 .header {
     background-color: #1f2937;
+    color:#F9FAF8;
     padding: 16px;
     display: flex;
-    flex: auto;
+    flex-direction: column;
+}
+
+.nav {
+    display: flex;
     justify-content: space-around;
-    align-items: center;
 }
 
 .header-logo {
-    color: #F9FAF8;
     font-size: 24px;
     font-weight: bold;
 }
@@ -37,3 +40,43 @@ a {
     display: flex;
 }
 
+.hero {
+    margin: 64px 0px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.hero-header {
+    margin: 0;
+    font-size: 48px;
+    font-weight: bolder;
+}
+
+.hero-text {
+    font-size: 18px;
+}
+
+.hero-button {
+    background-color: #3882f6;
+    color: #F9FAF8;
+    font-size: 20px;
+    font-weight: bold;
+    padding: 8px;
+    border-radius: 8px;
+    max-width: 120px;
+    border-color: transparent;
+}
+
+.left-hero,
+.right-hero {
+    display: flex;
+    flex-direction: column;
+    max-width: 400px;
+}
+
+.right-hero img{
+    max-width: 100%;
+    width: 300px;
+    height: auto;
+}
