--- a/style.css
+++ b/style.css
@@ -65,7 +65,7 @@ a {
     font-weight: bold;
     padding: 8px;
     border-radius: 8px;
-    max-width: 120px;6
+    max-width: 120px;
     border-color: transparent;
 }
 
