--- a/style.css
+++ b/style.css
@@ -81,3 +81,32 @@ a {
     width: 300px;
     height: auto;
 }
+
+.placeholder {
+    width: 200px;
+    height: 200px;
+    border: 4px solid #3d3df0d5;
+    border-radius: 25px;
+}
+
+.info-title {
+    font-size: 36px;
+    font-weight: bolder;
+    color:#1f2937;
+    text-align: center;
+    margin: 32px 0px;
+}
+
+.info {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 32px;
+    justify-content: center;
+    margin: 32px 0px;
+}
+
+.content {
+    max-width: 205px;
+    text-align: center;
+    font-size: 18px;
+}
