--- a/style.css
+++ b/style.css
@@ -58,7 +58,8 @@ a {
     font-size: 18px;
 }
 
-.hero-button {
+.hero-button,
+.signup-button {
     background-color: #3882f6;
     color: #F9FAF8;
     font-size: 20px;
@@ -66,7 +67,16 @@ a {
     padding: 8px;
     border-radius: 8px;
     max-width: 120px;
+    white-space: nowrap;
+}
+
+.hero-button {
+    
     border-color: transparent;
+}
+
+.signup-button {
+    border: 4px solid white;
 }
 
 .left-hero,
@@ -85,7 +95,7 @@ a {
 .placeholder {
     width: 200px;
     height: 200px;
-    border: 4px solid #3d3df0d5;
+    border: 4px solid #3882f6;
     border-radius: 25px;
 }
 
@@ -131,4 +141,25 @@ a {
     font-weight: bolder;
     font-size: 24px;
     align-self: flex-end;
+}
+
+.signup {
+    color:#e5e7eb;
+    border-radius: 10px;
+    background-color: #3882f6;
+    padding: 32px 10%;
+    margin: 32px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 16px
+}
+
+.signup-header {
+    font-size: 24px;
+    font-weight: bolder;
+}
+
+.signup-text {
+    font-size: 18px;
 }
