--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ ul {
     gap: 16px;
 }
 
-a {
+.header-links a {
     text-decoration: none;
     color: #F9FAF8;
     font-size: 18px;
@@ -162,4 +162,17 @@ a {
 
 .signup-text {
     font-size: 18px;
+}
+
+footer {
+    background-color:#1f2937;
+    color: #e5e7eb;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 64px;
+}
+
+footer a {
+    color: #e5e7eb;
 }
